fix fancybox toolbar when admin bar is visible

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -2206,6 +2206,9 @@ body #youmax, body .youmax{
 			margin-top: 31px;
 		}
 	}
+	.fancybox-toolbar{
+		top: 32px;
+	}
 }
 
 
